[workspace]
members = [
    "crates/vuc-core",
    "crates/vuc-events",
    "crates/vuc-types",
    "crates/vuc-common",
    "crates/vuc-platform",
    "crates/vuc-reader",
    "crates/vuc-storage",
    "crates/vuc-tx",
]
resolver = "2"

[workspace.package]
authors = ["Vylte-finuka <vylte-finuka@vylte-finuka.com>"]
edition = "2021"
homepage = "vylte-finuka.com"
license = "Apache-2.0"
publish = false
repository = "https://github.com/vyftteam/slurachain"
rust-version = "1.80.1"

[workspace.dependencies]
anyhow = "1.0.98"
serde = { version = "1.0.193", features = ["derive", "rc"] }
rand = "0.8"
goblin = "0.10.0"
bytes = { version = "1.4.0", features = ["serde"] }
bcs = "0.1.6"
hashbrown = "0.15"
lazy_static = "1.4.0"
serde_json = { version = "1.0.81", features = ["preserve_order", "arbitrary_precision"] }
num-traits = "0.2.19"
uvm-runtime = { path = "crates/vuc-reader/src/uvm/runtime" }
hex = { version = "0.4.3", features = ["serde"] }
bincode = "1.3.3"
tokio = { version = "1.35.1", features = ["full"] }
futures = "0.3.29"
tracing = "0.1.37"
log = "0.4.17"
base64 = "0.22.1"
chrono = { version = "0.4.19", features = ["clock", "serde"] }
fastcrypto = "0.1.9"
md5 = "0.7.0"
sha2 = "0.9.3"
jsonrpsee-http-client = "0.24.0"
jsonrpsee-server = "0.24.0"
jsonrpsee-types = "0.24.0"
prometheus = { version = "0.13.3", default-features = false }
rayon = "1.5.2"
serde_derive = "1.0.193"
sha3 = "0.9.1"
smallvec = "1.8.0"
