[package]
name = "vuc-platform"
version = "0.1.0"
edition = { workspace = true }

[dependencies]
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true, features = ["derive"] }
bcs = { workspace = true }
anyhow = "1.0.98"
hex = "0.4"
chrono = { workspace = true, features = ["serde"] }
tracing-subscriber = "0.2.15"
tracing = { workspace = true }
rand_chacha = "0.9.0"
rand = { workspace = true }
num-traits = { workspace = true }
percent-encoding = "2.3.1"
hashbrown = { workspace = true }
futures = { workspace = true }
prometheus = { workspace = true }
serde_json = { workspace = true }
jsonrpsee-types = { workspace = true }
jsonrpsee-server = { workspace = true }
jsonrpsee-http-client = { workspace = true }
rayon = { workspace = true }
vuc-tx = { path = "../vuc-tx" }
vuc-core = { path = "../vuc-core" }
vuc-types = { path = "../vuc-types" }
vuc-storage = { path = "../vuc-storage" }
vuc-events = { path = "../vuc-events" }
fastcrypto = { workspace = true }
sha3 = { workspace = true }
uvm-runtime = { workspace = true }

[[bin]]
name = "vuc-platform"
path = "src/engine_platform.rs"

[package.metadata]
license = "Vylte-finuka"
description = "Vyft ultrachain smart contract platform."