[package]
name = "vuc-platform"
version = "0.1.0"
edition = { workspace = true }

[dependencies]
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true, features = ["derive"] }
bcs = { workspace = true }
anyhow = "1.0.98"
hex = "0.4"
chrono = { workspace = true, features = ["serde"] }
tracing-subscriber = "0.2.15"
tracing = { workspace = true }
rand_chacha = "0.9.0"
rand = { workspace = true }
num-traits = { workspace = true }
percent-encoding = "2.3.1"
hashbrown = { workspace = true }
futures = { workspace = true }
prometheus = { workspace = true }
serde_json = { workspace = true }
jsonrpsee-types = { workspace = true }
jsonrpsee-server = { workspace = true }
jsonrpsee-http-client = { workspace = true }
rayon = { workspace = true }
vuc-tx = { path = "../vuc-tx" }
vuc-core = { path = "../vuc-core" }
vuc-types = { path = "../vuc-types" }
vuc-storage = { path = "../vuc-storage" }
vuc-events = { path = "../vuc-events" }
fastcrypto = { workspace = true }
bincode = { workspace = true }
sha3 = { workspace = true }
uvm-runtime = { workspace = true }
reth-trie = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.9.1", package = "reth-trie" }
reth-primitives = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.9.1", package = "reth-primitives" }
base64.workspace = true
lazy_static.workspace = true
futures-util = "0.3.31"
k256 = "0.13.4"
sha_256 = "1.0.1"
rlp = "0.6.1"
typenum = "1.19.0"
dotenv = "0.15"
ethers = "2.0.14"
alloy-primitives = "1.4.1"
tiny-keccak = "2.0.2"

[[bin]]
name = "vuc-platform"
path = "src/engine_platform.rs"

[package.metadata]
license = "Vylte-finuka"
description = "Vyft slurachain smart contract platform."

[features]
safe_mode = []
